install(FILES applications.desktop  DESTINATION "${KDE2_APPSDIR}/Applications/" RENAME ".directory")
install(FILES development.desktop  DESTINATION "${KDE2_APPSDIR}/Development/" RENAME ".directory")

install(FILES games.desktop  DESTINATION "${KDE2_APPSDIR}/Games/" RENAME ".directory")
install(FILES games-arcade.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Arcade/" RENAME ".directory")
install(FILES games-board.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Board/" RENAME ".directory")
install(FILES games-card.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Card/" RENAME ".directory")
install(FILES games-tacticstrategy.desktop  DESTINATION "${KDE2_APPSDIR}/Games/TacticStrategy/" RENAME ".directory")

install(FILES graphics.desktop  DESTINATION "${KDE2_APPSDIR}/Graphics/" RENAME ".directory")
install(FILES multimedia.desktop  DESTINATION "${KDE2_APPSDIR}/Multimedia/" RENAME ".directory")

install(FILES system.desktop  DESTINATION "${KDE2_APPSDIR}/System/" RENAME ".directory")
install(FILES system-screensavers.desktop  DESTINATION "${KDE2_APPSDIR}/System/ScreenSavers/" RENAME ".directory")
install(FILES system-terminal.desktop  DESTINATION "${KDE2_APPSDIR}/System/Terminal/" RENAME ".directory")

install(FILES internet.desktop  DESTINATION "${KDE2_APPSDIR}/Internet/" RENAME ".directory")
install(FILES internet-terminal.desktop  DESTINATION "${KDE2_APPSDIR}/Internet/Terminal/" RENAME ".directory")

install(FILES utilities.desktop  DESTINATION "${KDE2_APPSDIR}/Utilities/" RENAME ".directory")
install(FILES office.desktop  DESTINATION "${KDE2_APPSDIR}/Office/" RENAME ".directory")
install(FILES editors.desktop  DESTINATION "${KDE2_APPSDIR}/Editors/" RENAME ".directory")
install(FILES toys.desktop  DESTINATION "${KDE2_APPSDIR}/Toys/" RENAME ".directory")

install(FILES settings.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/" RENAME ".directory")
install(FILES settings-looknfeel.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/LookNFeel/" RENAME ".directory")
install(FILES settings-information.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Information/" RENAME ".directory")
install(FILES settings-sound.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Sound/" RENAME ".directory")
install(FILES settings-peripherals.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Peripherals/" RENAME ".directory")
install(FILES settings-filebrowsing.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/FileBrowsing/" RENAME ".directory")
install(FILES settings-webbrowsing.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/WebBrowsing/" RENAME ".directory")
install(FILES settings-power.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/PowerControl/" RENAME ".directory")
install(FILES settings-person.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Personalization/" RENAME ".directory")
install(FILES settings-help.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Help/" RENAME ".directory")
install(FILES settings-network.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Network/" RENAME ".directory")
install(FILES settings-system.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/System/" RENAME ".directory")
install(FILES settings-databases.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Databases/" RENAME ".directory")
install(FILES wordprocessing.desktop  DESTINATION "${KDE2_APPSDIR}/WordProcessing/" RENAME ".directory")

