add_subdirectory(kcontrol)
add_subdirectory(konq)

add_subdirectory(fonts)
add_subdirectory(pics)

if (XKBstr_FOUND)
    add_subdirectory(access)
endif()

add_subdirectory(bell)
add_subdirectory(background)
add_subdirectory(filetypes)
#add_subdirectory(samba)
add_subdirectory(display)
add_subdirectory(input)
add_subdirectory(info)
add_subdirectory(ioslaveinfo)
#add_subdirectory(kdm)
add_subdirectory(kwm)
add_subdirectory(kicker)
add_subdirectory(locale)
add_subdirectory(launch)
add_subdirectory(keys)
add_subdirectory(kio)
add_subdirectory(thememgr)
add_subdirectory(konqhtml)
add_subdirectory(email)
add_subdirectory(ebrowsing)
add_subdirectory(arts)
add_subdirectory(passwords)
add_subdirectory(knotify)
add_subdirectory(clock)
add_subdirectory(colors)
add_subdirectory(energy)
add_subdirectory(css)
add_subdirectory(icons)
add_subdirectory(screensaver)
add_subdirectory(taskbar)
add_subdirectory(crypto)
#add_subdirectory(midi)
add_subdirectory(smserver)
#add_subdirectory(socks)
add_subdirectory(kwindecoration)
add_subdirectory(konsole)
add_subdirectory(spellchecking)
add_subdirectory(usbview)
