SUBDIRS = bell background filetypes samba display input info ioslaveinfo kdm kwm\
	kicker locale launch keys kio konq thememgr \
	konqhtml email ebrowsing arts kcontrol passwords knotify\
	clock pics $(ACCESS_SUBDIR) colors energy fonts css \
	icons screensaver taskbar crypto midi smserver \
	socks kwindecoration konsole spellchecking usbview

